# dadm-cpp

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  _BACKUP_1715.gitignore  cmake_install.cmake  main.cpp  travis_qmake_gcc_cpp98.pro
GUI/: apptabbar.cpp  apptabbar.h  apptabcontrol.cpp  apptabcontrol.h  dadm2.pro  main.cpp  mainwindow.ui  mainwindow.ui.autosave
_src/: Source2.cpp  _main.cpp  main.cpp  model.cpp
_src/helpers/: add.cpp
_src/view/: window.cpp  window.h
build-dadm2-Desktop_Qt_5_12_6_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h
libraries/: CMakeLists.txt
src/ECGAnalyzer/: ECGAnalyzer.pro  ECGAnalyzer.pro.user.3996be1  ECGAnalyzer.pro.user.547010f.4.8-pre1  ECGAnalyzer.pro.user.8cf8536.4.8-pre1  data_loader.h  datafile.cpp  datafile.h  dataloader.cpp  dataloader.h  detectingmorfology.cpp  detectingmorfology.h  detectmorfology_emxapi.cpp  detectmorfology_emxapi.h  detectmorfology_emxutil.cpp  detectmorfology_emxutil.h  detectmorfology_types.h  dfa.cpp  dfa.h  ecg.cpp  ecg.h  ecg.ui  ecganalyzercontroller.cpp  ecganalyzercontroller.h  ecgplotting.cpp  ecgplotting.h  ecgplotting.ui  fftw3.h  hrvhisto.cpp  hrvhisto.h  hrvhisto.ui  hrvperiodogram.cpp  hrvperiodogram.h  hrvperiodogram.ui  hrvpoincare.cpp  hrvpoincare.h  hrvpoincare.ui  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  (+49 more)
src/ECGAnalyzer/view/: window.cpp  window.h
src/build-ECGAnalyzer-Desktop_Qt_5_12_6_clang_64bit-Debug/: Makefile  ui_mainwindow.h
wizualizacja/: makefile  sine.cpp  sound.h
(+39 files in other folders)
